welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i <- 0 to nums.length-1){
  ^averageValue:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return s
  ^